# battleship-sdl

./: CMakeLists.txt  README.md
assets/: bg.png~  hit.png~
src/: draw.cpp  draw.h  main.cpp  main.h
